# signal-hunter

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECT.md  CAPABILITIES.md  CLAUDE.md  GITHUB_ISSUE_CREATOR_README.md  GIT_WORKTREE_GUIDE.md  IDENTITY.md  MEMORY.md  PROJECT_PLAN.md  PROPOSAL_HEALTH_SYSTEM.md  README.md  SKILL.md  STRUCTURE.md  TESTING_README.md  USER.md  analysis_report.md  config.yaml  deploy-to-github.sh  execute_tests.py  github_issue_api.py  github_issue_creator.py  monitor_components.py  push-to-github.sh  pyproject.toml  run-tests.sh  test_plan_github_issues.md
config/: hunter.yaml  skill-manifest-updated.yaml  skill-manifest.yaml
docs/: AI_STUDIO_STRATEGY.md  AI_TEAM_ARCHITECTURE.md  AI_TEAM_DIAGRAMS.md  ANTI_ECHO_DESIGN.md  CLAWHUB_ANALYSIS.md  ENGINEERING.md  NOTION_ANTIGRAVITY_SETUP.md  PHASE1_RESEARCH_PLAN.md  PRD.md  SKILLS_RECOMMENDATION.md  TECH_SPEC.md  TODO.md  TRADING_STUDIO_EXECUTION.md  model_management_cheatsheet.md
docs/project/: BACKLOG.md  PRD-001_trinity_refactor.md  PRD-002_workflow_notifications.md  ROADMAP.md
docs/system/: TEAM.md  WORKFLOW.md
memory/: 2026-01-30.md  2026-01-31.md  TASK_ORCHESTRATOR.md  bloggers.md  daily-check-2026-01-31.md  pm-skill-status.md  skill-installation-plan.md  task-001-web-researcher-first-mission.md  team-skill-configuration.md  telegram_specs.md
memory/reports/: pm-enhancement-config-complete.md  skill-audit-2026-01-31.md  skill-discovery-2026-01-31.md  skill-verification-final.md  web-researcher-mission-001.md
scripts/: check_models_health.py  check_notion.py  daily_check.sh  daily_check_telegram.py  guardian.sh  setup_env.sh  setup_notion.py  sync_to_notion.py  update_notion_kols.py
scripts/infrastructure/: guardian.py
scripts/ops/: clawd-ops.py  test_assets.py
scripts/utils/: notify_progress.py  test_api_connectivity.py
skills/aider/: SKILL.md
skills/bug-manager/: SKILL.md  main.py
skills/clawd-ops/: SKILL.md  skill.json
skills/link-handler/: SKILL.md  main.py
skills/skill-manager/: README.md  SKILL.md  auto_update_skills.py  install_skills.py  skill-manager.sh  skill_discovery.py
skills/task-manager/: SKILL.md  main.py
src/: bot_runner.py  main.py  scheduler.py
src/auth/: user_manager.py
src/core/: adapter_web.py  config.py  database.py  diversity_analyzer.py  engine.py  fetcher.py  processor.py  summarizer.py
src/hunter/: main.py  scout.py
src/models/: schemas.py
src/utils/: notifier.py  reporter.py  teleporter.py
tasks/: 001_system_health_script.md  002_fix_signal_hunter_channel_id.md  003_hunter_core_implementation.md  004_workflow_notification_system.md  006_modularize_reporting.md  ISSUE_DRAFT_001.md  PRD-002_User_Management.md
templates/github_issues/: bug_template.md  epic_template.md  task_template.md
tests/: conftest.py  run_reporting_tests.py  test_guardian.py  test_hunter.py  test_reporting.py
tests/auth/: test_user_manager.py
tests/unit/: test_database.py  (+1 more)
